upgrading to jdk11, fixing Kraken2db path